<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    tools:context="com.erim.nothesaplama.HarfNotuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="8"
        android:id="@+id/linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/yukseklik"
            android:layout_weight="1"
            android:id="@+id/VizeTV"
            android:text="@string/vizeNotu"
            android:paddingTop="@dimen/text_paddingi"
            android:textSize="@dimen/text_boyutu"/>

        <EditText
            android:layout_width="@dimen/edittxt_widthi"
            android:layout_height="@dimen/yukseklik"
            android:layout_weight="3"
            android:id="@+id/VizeET"
            android:layout_toRightOf="@id/VizeTV"
            android:layout_marginLeft="@dimen/margin"
            android:inputType="numberDecimal"
            android:maxLength="3"
            android:maxLines="1"
            android:nextFocusDown="@+id/FinalET"
            android:textSize="@dimen/text_boyutu"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/yukseklik"
            android:layout_weight="1"
            android:id="@+id/FinalTV"
            android:text="@string/finalNotu"
            android:paddingTop="@dimen/text_paddingi"
            android:layout_marginLeft="@dimen/orta_margin"
            android:textSize="@dimen/text_boyutu"/>

        <EditText
            android:layout_width="@dimen/edittxt_widthi"
            android:layout_height="@dimen/yukseklik"
            android:layout_weight="3"
            android:id="@+id/FinalET"
            android:layout_toRightOf="@id/FinalTV"
            android:layout_marginLeft="@dimen/margin"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="3"
            android:nextFocusDown="@+id/hbnoET"
            android:textSize="@dimen/text_boyutu"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin"
        android:id="@+id/linear_2"
        android:layout_below="@id/linear"
        android:weightSum="8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/yukseklik"
            android:layout_weight="1"
            android:id="@+id/hbnoTV"
            android:text="@string/hbnoNotu"
            android:paddingTop="@dimen/text_paddingi"
            android:textSize="@dimen/text_boyutu"/>

        <EditText
            android:layout_width="@dimen/edittxt_widthi"
            android:layout_height="@dimen/yukseklik"
            android:layout_weight="3"
            android:id="@+id/hbnoET"
            android:layout_toRightOf="@id/hbnoTV"
            android:layout_marginLeft="@dimen/ara_margin"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:maxLength="5"
            android:textSize="@dimen/text_boyutu"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_marginLeft="@dimen/orta_margin"
            android:text="Hesapla"
            android:textSize="@dimen/text_boyutu"
            android:background="@color/butonArkaplani"
            android:id="@+id/HarfHesapla"/>
    </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear_2"
            android:id="@+id/letterScore"
            android:text="@string/harfNotunuz"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/text_boyutu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/letterScore"
            android:id="@+id/vizeFinalAverage"
            android:text="@string/vizeFinalOrt"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/text_boyutu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/vizeFinalAverage"
            android:id="@+id/relativeAverage"
            android:text="@string/bagil"
            android:layout_marginTop="@dimen/margin"
            android:textSize="@dimen/text_boyutu"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/letterScoreNecessary"
          android:text="@string/aralikHarfNotlari"
          android:layout_marginTop="@dimen/margin"
          android:layout_below="@+id/relativeAverage"
          android:textSize="@dimen/text_boyutu"/>

    </RelativeLayout></ScrollView>
</FrameLayout>
